Title and Logo for Header complete

--- a/wayfarer/src/app/header/header.component.html
+++ b/wayfarer/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<div class="container">
+    <div style="font-size:5rem;width:15%;text-align:center;"> 🌐 </div>
+    <div class="title">
+        <h1>Wayfarer</h1>
+    </div>
+</div>
