--- a/wayfarer/src/app/header/header.component.css
+++ b/wayfarer/src/app/header/header.component.css
@@ -1,3 +1,11 @@
+:root {
+  --branding-color: #;
+  --secondary-color: #;
+  --text-color: #;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "poppins", sans-serif;
+}
+
 .container {
     background-color: aquamarine;
     display: flex;
@@ -7,6 +15,7 @@
     display: flex;
     align-items: center;
     font-size: x-large;
+    font-family: var(--heading-font-family);
 }
 
 
