--- a/wayfarer/src/app/header/header.component.html
+++ b/wayfarer/src/app/header/header.component.html
@@ -3,4 +3,13 @@
     <div class="title">
         <h1>Wayfarer</h1>
     </div>
+
+    <router-outlet></router-outlet>
+
+    <ul>
+        <li>
+            <a href="https://www.google.com/">Home</a>
+        </li>
+    </ul>
 </div>
+
