--- a/wayfarer/src/app/header/header.component.html
+++ b/wayfarer/src/app/header/header.component.html
@@ -1,15 +1,15 @@
 <div class="container">
-    <div style="font-size:5rem;width:15%;text-align:center;"> 🌐 </div>
-    <div class="title">
-        <h1>Wayfarer</h1>
-    </div>
+  <div style="font-size: 5rem; width: 15%; text-align: center">🌐</div>
+  <div class="title">
+    <h1>Wayfarer</h1>
+  </div>
 
-    <router-outlet></router-outlet>
-
-    <ul>
-        <li>
-            <a href="https://www.google.com/">Home</a>
-        </li>
-    </ul>
+  <ul>
+    <li>
+      <a routerLink="/">Home</a>
+    </li>
+    <li>
+      <a routerLink="/cities">Cities</a>
+    </li>
+  </ul>
 </div>
-
