--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,1 +1,5 @@
-<p>cities works!</p>
+<div class="city-display"  *ngFor="let city of cities">
+    
+    <p>{{city.id}}</p>
+    <p>{{city.name}}</p>
+</div>
