--- a/src/app/homepage-info/homepage-info.component.html
+++ b/src/app/homepage-info/homepage-info.component.html
@@ -1,1 +1,28 @@
-<p>homepage-info works!</p>
+<div class="container text-center">
+    <div class="row">
+      <div class="col">
+            <div class="title">
+                <h2>Topic</h2>
+            </div>
+            <div class="topic-info">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis, odio ac viverra congue, tellus elit feugiat justo, at sollicitudin justo mi vel enim. </p>
+            </div>
+      </div>
+      <div class="col">
+        <div class="title">
+            <h2>Topic</h2>
+        </div>
+        <div class="topic-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis, odio ac viverra congue, tellus elit feugiat justo, at sollicitudin justo mi vel enim. </p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="title">
+            <h2>Topic</h2>
+        </div>
+        <div class="topic-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis, odio ac viverra congue, tellus elit feugiat justo, at sollicitudin justo mi vel enim. </p>
+        </div>
+      </div>
+    </div>
+  </div>
