--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,16 +8,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+          <a class="nav-link active" aria-current="page" (click)="toggleSearchBar()" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/cities">Cities</a>
+          <a class="nav-link" (click)="searchBack()" routerLink="/cities">Cities</a>
         </li>
       </ul>
+      <div *ngIf="canSeeSearch">
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      </div>
     </div>
   </div>
 </nav>
