--- a/src/app/displaycity/displaycity.component.css
+++ b/src/app/displaycity/displaycity.component.css
@@ -1,3 +1,61 @@
+:root{
+--branding-color: #84A59D;
+--secondary-color: #FBECE9;
+--text-color: #131B19;
+--hover-color: #F6BD60;
+--clicked-color: #F7B6B5;
+}
 .both {
     display: flex;
+}
+.citieslist{
+    flex: 1;
+}
+.display{
+    flex: 2;
+}
+.card{
+    padding:20px;
+    justify-content: space-between;
+}
+.card-body{
+    display: flex;
+    padding:5px;
+    align-items: center;
+}
+.card-body > h1{
+    flex:1;
+    padding:10px;
+}
+.card-body > img{
+    width:60%;
+    border-radius:10px;
+    border:2px solid black;
+}
+.post{
+    display: flex; 
+    flex-direction: column; 
+    align-items: start;
+}
+.postcard{
+    display:flex;
+    justify-content: center;
+    margin:10px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+#p-image{
+    max-width:100%;
+    max-height:100%;
+    padding:10px;
+    border-radius:20px;
+}
+.postcard > .post{
+    min-width:70%;
+}
+h3{
+    padding:10px;
+}
+img{
+    min-height:100%;
 }
