Card color styling for active and inactive links complete

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,9 @@
 :root {
-    --branding-color: #;
-    --secondary-color: #;
-    --text-color: #;
+    --branding-color: #84A59D;
+    --secondary-color: #FBECE9;
+    --text-color: #131B19;
+    --hover-color: #F6BD60;
+    --clicked-color: #F7B6B5;
     --heading-font-family: "Playfair Display", serif;
     --default-font-family: "poppins", sans-serif;
   }
