Made whole card clickable, added routerLink to card, and changed text styling of card

--- a/src/app/cities/cities.component.css
+++ b/src/app/cities/cities.component.css
@@ -14,9 +14,14 @@
 
 .card:hover {
     background-color: #F6BD60;
+    cursor: pointer;
 }
 
-
+a {
+    text-decoration: none;
+    color: #131B19;
+    font-family: var(--default-font-family);
+}
 
 .active-link {
     background-color: #F7B6B5;
