--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -2,17 +2,17 @@
 <div class="container text-left">
   <div class="row" *ngFor="let city of cities">
     <div class="col">
- <div class="card">
-  <div class="card-body" [ngClass]="{'active-link': activeLinkId === city.id}"
-  (click)="activeLinkId = city.id" routerLink="/cities/{{ city.id }}" >
-   <a routerLink="/cities/{{ city.id }}" >{{ city.name }}</a>
-  </div>
-</div>
+      <div class="card">
+        <div
+          class="card-body"
+          [ngClass]="{ 'active-link': activeLinkId === city.id }"
+          (click)="activeLinkId = city.id"
+          routerLink="/cities/{{ city.id }}">
+          <img [src]="city.img" class="card-image" alt="city.image">
+          <a routerLink="/cities/{{ city.id }}">{{ city.name }}</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 <router-outlet></router-outlet>
-
-
-
-
