--- a/src/app/cities/cities.component.css
+++ b/src/app/cities/cities.component.css
@@ -20,7 +20,7 @@
 a {
     text-decoration: none;
     color: #131B19;
-    font-family: var(--default-font-family);
+    font-family: var(--default-font-family)
 }
 
 .active-link {
