--- a/src/app/displaycity/displaycity.component.css
+++ b/src/app/displaycity/displaycity.component.css
@@ -1,3 +1,14 @@
 .both {
     display: flex;
+    height: 100vh;
+    align-items: center;
+}
+
+.app-cities {
+    flex: 1;
+}
+
+.citieslist {
+    flex: 1;
+    display: flex;
 }
