--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,4 +1,4 @@
-<div class="displaycity"></div>
+<div class="big-container">
 <div class="container text-left">
   <div class="row" *ngFor="let city of cities">
     <div class="col">
@@ -16,3 +16,5 @@
   </div>
 </div>
 <router-outlet></router-outlet>
+</div>
+
