--- a/src/app/displaycity/displaycity.component.html
+++ b/src/app/displaycity/displaycity.component.html
@@ -1,6 +1,6 @@
 <div class="both">
 <div class="citieslist">
-  <app-cities></app-cities>
+  <!-- <app-cities></app-cities> -->
 </div>
 <div *ngIf="city" class="display">
 <div class="card" style="width: 100%" >
