--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,5 +1,5 @@
 <div class="big-container">
-<div class="container text-left">
+<div class="container text-left left-column">
   <div class="row" *ngFor="let city of cities">
     <div class="col">
       <div class="card">
