--- a/src/app/cities/cities.component.css
+++ b/src/app/cities/cities.component.css
@@ -32,7 +32,8 @@
 a {
     text-decoration: none;
     color: #131B19;
-    font-family: var(--default-font-family)
+    font-family: var(--default-font-family);
+    font-size:1.5rem;
 }
 
 .active-link {
@@ -49,5 +50,7 @@ a {
     height: 100px;
     object-fit: cover; 
     margin-right: 10px;
+    border:2px solid #131b19;
+    border-radius:10px;
 }
 
