--- a/src/app/displaycity/displaycity.component.css
+++ b/src/app/displaycity/displaycity.component.css
@@ -7,7 +7,6 @@
 }
 .both{ 
     display: flex;
-    align-items: center;
 }
 
 .display {
@@ -20,30 +19,36 @@
 .card {
   padding: 20px;
   justify-content: space-between;
+  background-color:#84a59d;
 }
 .card-body {
   display: flex;
   padding: 5px;
-  align-items: center;
+
 }
 .card-body > h1 {
   flex: 1;
   padding: 10px;
+  color:  #fbece9;
+  text-shadow: 2px 2px 2px #131b19;
+  font-size: 3rem;
 }
 .card-body > img {
   width: 60%;
   border-radius: 10px;
-  border: 2px solid black;
+  border: 4px solid #fbece9;
 }
 .post {
   display: flex;
   flex-direction: column;
+  color:#131b19;
 }
 .postcard {
   display: flex;
   justify-content: center;
   margin: 10px;
-  border: 1px solid black;
+  border: 2px solid  #F6BD60;
+  background-color: #fbece9;
   border-radius: 10px;
 }
 #p-image {
@@ -57,6 +62,8 @@
 }
 h3 {
   padding: 10px;
+  color:  #131b19;
+  text-shadow: 2px 2px 2px solid white;
 }
 img {
   min-height: 100%;
