--- a/src/app/displaycity/displaycity.component.html
+++ b/src/app/displaycity/displaycity.component.html
@@ -9,7 +9,8 @@
   <div class="postcard" *ngFor="let p of city.post">
   <div class="post-image"><img id="p-image" src={{city.img}} alt="imageofplace"></div>
   <div class="card-body post">
-    <h5 class="card-title">{{p.title}} </h5>
+    <h5 class="card-title"><a [routerLink]="['/cities', city.id, 'posts', p.id]">{{p.title}}</a>
+    </h5>
     <p class="card-text">{{p.description}}</p>
   </div>
 </div>
