updated post ids to get in params

--- a/src/app/show-page/show-page.component.html
+++ b/src/app/show-page/show-page.component.html
@@ -1,4 +1,6 @@
+<div *ngIf="city">
 <h2>{{ city.name }}</h2>
 <p>{{ post.title }}</p>
 <p>{{ post.description }}</p>
 <router-outlet></router-outlet>
+</div>
