--- a/src/app/homepage-img/homepage-img.component.html
+++ b/src/app/homepage-img/homepage-img.component.html
@@ -23,10 +23,10 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../assets/images/zanza.jpg" class="d-block w-100" alt="..." />
+      <img src="../../assets/images/SanFran.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5>Welcome to SanFrancisco </h5>
+        <p>Sunny California! The west coast of the USA</p>
       </div>
     </div>
     <div class="carousel-item">
