--- a/src/app/homepage-img/homepage-img.component.html
+++ b/src/app/homepage-img/homepage-img.component.html
@@ -30,10 +30,10 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../assets/images/london.png" class="d-block w-100" alt="..." />
+      <img src="../../assets/images/london-long.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5>Welcome to London</h5>
+        <p>A great city in the heart of the United Kingdom</p>
       </div>
     </div>
     <div class="carousel-item">
