--- a/src/app/homepage-img/homepage-img.component.html
+++ b/src/app/homepage-img/homepage-img.component.html
@@ -25,22 +25,22 @@
     <div class="carousel-item active">
       <img src="../../assets/images/SanFran.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Welcome to SanFrancisco </h5>
-        <p>Sunny California! The west coast of the USA</p>
+        <h5>Welcome to SanFrancisco! </h5>
+        <p>Sunny California! The west coast of the USA.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="../../assets/images/london-long.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Welcome to London</h5>
-        <p>A great city in the heart of the United Kingdom</p>
+        <h5>Welcome to London!</h5>
+        <p>A great city! In the heart of the United Kingdom.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../assets/images/dares.png" class="d-block w-100" alt="..." />
+      <img src="../../assets/images/zany.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Welcome to Zanzibar!</h5>
+        <p>Expand your horizons! Gorgeous clear water in Est Africa. </p>
       </div>
     </div>
   </div>
