updating the key points at the bottom

--- a/src/app/homepage-info/homepage-info.component.html
+++ b/src/app/homepage-info/homepage-info.component.html
@@ -1,28 +1,44 @@
 <div class="container text-center">
-    <div class="row">
-      <div class="col">
-            <div class="title">
-                <h2>Topic</h2>
-            </div>
-            <div class="topic-info">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis, odio ac viverra congue, tellus elit feugiat justo, at sollicitudin justo mi vel enim. </p>
-            </div>
+  <div class="row">
+    <div class="col">
+      <div class="title">
+        <h2 class="infohome">Pack Light We're Catching A Flight!</h2>
       </div>
-      <div class="col">
-        <div class="title">
-            <h2>Topic</h2>
-        </div>
-        <div class="topic-info">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis, odio ac viverra congue, tellus elit feugiat justo, at sollicitudin justo mi vel enim. </p>
-        </div>
+      <div class="topic-info">
+        <p class="phome">
+          When traveling trvalers usually over-pack! Lets stop that! A few ways
+          we can keep ourselves from over packing, is to be sure we are bringing
+          shoes, and accessories that can be worn multiple times. Additionally
+          we can plan to wear only two colors for the full trip, and then all of
+          our shoes, and accessories will match!
+        </p>
       </div>
-      <div class="col">
-        <div class="title">
-            <h2>Topic</h2>
-        </div>
-        <div class="topic-info">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis, odio ac viverra congue, tellus elit feugiat justo, at sollicitudin justo mi vel enim. </p>
-        </div>
+    </div>
+    <div class="col">
+      <div class="title">
+        <h2 class="infohome">Look Before You Book!</h2>
+      </div>
+      <div class="topic-info">
+        <p class="phome">
+          Be sure to look at all fine print details when booking a flight or hotel.
+          Make sure you, and your family are covered with travel insurance, always 
+          expect the unexpected! Make sure you are a fair distance away from the airline
+          and your accommodation. Double check all you times to save you a dime on any missed 
+          flights or over booked hotels!
+        </p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="title">
+        <h2 class="infohome">Topic</h2>
+      </div>
+      <div class="topic-info">
+        <p class="phome">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis,
+          odio ac viverra congue, tellus elit feugiat justo, at sollicitudin
+          justo mi vel enim.
+        </p>
       </div>
     </div>
   </div>
+</div>
