getting parammap find param Ids

--- a/src/app/show-page/show-page.component.html
+++ b/src/app/show-page/show-page.component.html
@@ -1,6 +1,7 @@
-<div *ngIf="city">
+<div class="container" *ngIf="post">
 <h2>{{ city.name }}</h2>
 <p>{{ post.title }}</p>
 <p>{{ post.description }}</p>
+<p>THIS IS A TEST</p>
 <router-outlet></router-outlet>
 </div>
