--- a/src/app/show-page/show-page.component.css
+++ b/src/app/show-page/show-page.component.css
@@ -1,7 +1,6 @@
 .container{
-    background-color: orange;
-    color: black;
     position: absolute; 
-    top:50%; 
+    width:65%;
+    top:0; 
     right:0;
 }
