--- a/src/app/show-page/show-page.component.html
+++ b/src/app/show-page/show-page.component.html
@@ -2,5 +2,6 @@
 <h2>{{ city.name }}</h2>
 <p>{{ post.title }}</p>
 <p>{{ post.description }}</p>
+<a routerLink="/cities/{{city.id}}">Back</a>
 <router-outlet></router-outlet>
 </div>
