updated info for city travel tips

--- a/src/app/homepage-info/homepage-info.component.html
+++ b/src/app/homepage-info/homepage-info.component.html
@@ -2,25 +2,28 @@
   <div class="row">
     <div class="col">
       <div class="title">
-        <h2 class="infohome">Pack Light We're Catching A Flight!</h2>
+        <h2 class="infohome">Pack Light On a</h2>
+        <h2 class="infohome1">Flight!</h2>
       </div>
       <div class="topic-info">
         <p class="phome">
-          When traveling trvalers usually over-pack! Lets stop that! A few ways
+          When traveling travelers usually over-pack! Lets stop that! A few ways
           we can keep ourselves from over packing, is to be sure we are bringing
           shoes, and accessories that can be worn multiple times. Additionally
           we can plan to wear only two colors for the full trip, and then all of
-          our shoes, and accessories will match!
+          our shoes, and accessories will match! Pack all essential clothing in
+          in your carry on incase anything happens to your checked bags.
         </p>
       </div>
     </div>
     <div class="col">
       <div class="title">
-        <h2 class="infohome">Look Before You Book!</h2>
+        <h2 class="infohome">Look Before You</h2>
+        <h2 class="infohome1">Book!</h2>
       </div>
       <div class="topic-info">
         <p class="phome">
-          Be sure to look at all fine print details when booking a flight or hotel.
+          Be sure to <i>look</i> at all fine print details when booking a flight or hotel.
           Make sure you, and your family are covered with travel insurance, always 
           expect the unexpected! Make sure you are a fair distance away from the airline
           and your accommodation. Double check all you times to save you a dime on any missed 
@@ -30,13 +33,17 @@
     </div>
     <div class="col">
       <div class="title">
-        <h2 class="infohome">Topic</h2>
+        <h2 class="infohome">Chill or Feel The</h2>
+        <h2 class="infohome1">Thrill!</h2>
       </div>
       <div class="topic-info">
         <p class="phome">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis,
-          odio ac viverra congue, tellus elit feugiat justo, at sollicitudin
-          justo mi vel enim.
+         Always sort your trip out before the trip so you can <i>chill.</i> Make sure you book
+         all of your excursions before hand as well to be you have sorted out your transportation
+         needs as well. Booking excursionsearly can help you navigate what you need to pack.
+          Any popular restaurants you have on your list make sure you have booked them 
+          in advanced so that you  are sure you will have a seat at the table. 
+         
         </p>
       </div>
     </div>
