--- a/src/app/homepage-info/homepage-info.component.css
+++ b/src/app/homepage-info/homepage-info.component.css
@@ -8,12 +8,23 @@
     --default-font-family: "poppins", sans-serif;
   }
 
+  /* This is for the first H2 */
 .infohome {
 font-family:'Courier New', Courier, monospace;
 color:#085948;
 font-weight: bold;
-margin-bottom: 15%;
+margin-top: 20%;
 }
+
+
+/* This is for the second H2 */
+.infohome1 {
+font-family:'Courier New', Courier, monospace;
+color:#085948;
+font-weight: bold;
+}
+
+/* This is for the p tags  */
 
 .phome {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
