added dataService to search all posts

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,9 +15,9 @@
         </li>
       </ul>
       <div *ngIf="canSeeSearch">
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <form class="d-flex" role="search"(ngSubmit)="onSubmit()">
+        <input class="form-control me-2" type="search" [(ngModel)]="keyword" name="keyword" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit" >Search</button>
       </form>
       </div>
     </div>
