--- a/src/app/displaycity/displaycity.component.css
+++ b/src/app/displaycity/displaycity.component.css
@@ -36,7 +36,7 @@
 .card-body > img {
   width: 60%;
   border-radius: 10px;
-  border: 4px solid #F6BD60;
+  border: 4px solid white;
 }
 .post {
   display: flex;
@@ -47,7 +47,7 @@
   display: flex;
   justify-content: center;
   margin: 10px;
-  border: 2px solid  #F6BD60;
+  border: 2px solid white;
   background-color: #fbece9;
   border-radius: 10px;
 }
@@ -68,4 +68,8 @@ h3 {
 }
 img {
   min-height: 100%;
+}
+
+p {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
