--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -1,4 +1,101 @@
 .container{
-    width:100vw;
+    width:80vw;
     height:100vh;
+    margin-top:20px;
+    display:flex; 
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: 4px solid #84a59d;
+    background-color: #a4c4bc;
+
 }
+.no-posts > h6{
+    margin-top:30px;
+    font-size: 4rem;
+}
+.no-posts > p{
+    font-size: 1.5rem;
+}
+.links{
+    font-size: 2rem;
+    text-decoration: none;
+    display: flex; 
+    justify-content: space-between;
+    width: 50%;
+    height:60px;
+}
+a{
+    border: 4px solid #435551;
+    background-color:rgb(249, 237, 239);
+    border-radius: 10px; 
+    height:100%; 
+    width: 35%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #435551;
+    &:hover{
+        background-color: #F6BD60;;
+    }
+}
+.card {
+    padding: 20px;
+    justify-content: space-between;
+    background-color:#a4c4bc;
+  }
+  .card-body {
+    display: flex;
+    padding: 5px;
+  }
+  .card-body > h1 {
+    flex: 1;
+    padding: 10px;
+    color:  #fbece9;
+    text-shadow: 2px 2px 2px #131b19;
+    font-size: 3rem;
+  }
+  .card-body > img {
+    width: 60%;
+    border-radius: 10px;
+    border: 4px solid white;
+  }
+  .post {
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+    color:#131b19;
+  }
+  .postcard {
+    display: flex;
+    margin: 10px;
+    border-radius: 10px;
+    background-color: rgb(251, 251, 251);
+    width:95%;
+    text-align: left;
+    margin: 6px;
+    border: 3px solid #131b19;
+    min-height: 80px;
+  }
+
+  #p-image {
+    max-width: 100%;
+    max-height: 100%;
+    padding: 10px;
+    border-radius: 20px;
+  }
+  .postcard > .post {
+    min-width: 70%;
+  }
+  h3 {
+    padding: 10px;
+    color:  #131b19;
+    font-size:2rem;
+    font-weight: bolder;
+  }
+  img {
+    min-height: 100%;
+  }
