added more CSS, fixed pinnapple route!

--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -39,7 +39,8 @@ a{
     text-decoration: none;
     color: #435551;
     &:hover{
-        background-color: #F6BD60;;
+        background-color:#374643;
+        color: white;
     }
 }
 .card {
