--- a/src/app/displaycity/displaycity.component.css
+++ b/src/app/displaycity/displaycity.component.css
@@ -4,9 +4,12 @@
   --text-color: #131b19;
   --hover-color: #f6bd60;
   --clicked-color: #f7b6b5;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "poppins", sans-serif;
 }
 .both{ 
     display: flex;
+    font-family: "poppins", sans-serif;
 }
 .display {
   max-width:65%;
@@ -20,6 +23,10 @@
   justify-content: space-between;
   background-color:#a4c4bc;
 }
+.card-text{
+  font-size:1.1rem;
+  padding:5px;
+}
 .card-body {
   display: flex;
   padding: 5px;
@@ -28,7 +35,7 @@
 .card-body > h1 {
   flex: 1;
   padding: 10px;
-  color:  #fbece9;
+  color:  #f6feff;
   text-shadow: 2px 2px 2px #131b19;
   font-size: 3rem;
 }
@@ -47,17 +54,19 @@
   justify-content: center;
   margin: 10px;
   border: 2px solid white;
-  background-color: #fbece9;
+  background-color: #ecfaf7;
   border-radius: 10px;
 }
 #p-image {
-  max-width: 100%;
+  min-width:80%;
+  max-width: 80%;
   max-height: 100%;
   padding: 10px;
   border-radius: 20px;
 }
 .postcard > .post {
-  min-width: 70%;
+  min-width: 80%;
+  max-width:80%;
 }
 h3 {
   padding: 10px;
@@ -67,12 +76,13 @@ h3 {
 }
 img {
   min-height: 100%;
+  max-height:100%;
 }
 
-p {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
 .card-title > a{
   text-decoration: none;
   color: #131b19;
+  &:hover{
+    color: rgb(0, 76, 255);
+  }
 }
