--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,12 +1,15 @@
+<div class="link-container">
+<div class="links">
+    <a routerLink="/cities">See Cities</a>
+    <a routerLink="/">Home</a>
+</div>
+</div>
 <div class="container">
-    <div class="links">
-        <a routerLink="/cities">See Cities</a>
-        <a routerLink="/">Home</a>
-    </div>
     <div class="no-posts" *ngIf="!receivedData" >
         <h6>No results found</h6>
         <p>please try modifying your search results</p>
     </div>
+    <h1>Search Results</h1>
     <div class="postcard" *ngFor="let data of receivedData">
         <div class="post-image">  🚩</div>
         <div class="card-body post">
