--- a/src/app/homepage-img/homepage-img.component.html
+++ b/src/app/homepage-img/homepage-img.component.html
@@ -25,22 +25,22 @@
     <div class="carousel-item active">
       <img src="../../assets/images/sanfranny.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Welcome to SanFrancisco! </h5>
+        <h5>Explore San Francisco! </h5>
         <p>Sunny California! The west coast of the USA.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="../../assets/images/londonhope.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Welcome to London!</h5>
+        <h5>Explore London!</h5>
         <p>A great city! In the heart of the United Kingdom.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="../../assets/images/zany.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Welcome to Zanzibar!</h5>
-        <p>Expand your horizons! Gorgeous clear water in Est Africa. </p>
+        <h5>Explore Zanzibar!</h5>
+        <p>Expand your horizons! Gorgeous clear water in est Africa. </p>
       </div>
     </div>
   </div>
