--- a/src/app/homepage-info/homepage-info.component.html
+++ b/src/app/homepage-info/homepage-info.component.html
@@ -23,10 +23,10 @@
       </div>
       <div class="topic-info">
         <p class="phome">
-          Be sure to <i>look</i> at all fine print details when booking a flight or hotel.
+          Be sure to <i>look</i> at all fine print when booking a flight or hotel.
           Make sure you, and your family are covered with travel insurance, always 
           expect the unexpected! Make sure you are a fair distance away from the airline
-          and your accommodation. Double check all you times to save you a dime on any missed 
+          and your accommodation. Double check all your times to save you a dime on any missed 
           flights or over booked hotels!
         </p>
       </div>
@@ -38,9 +38,9 @@
       </div>
       <div class="topic-info">
         <p class="phome">
-         Always sort your trip out before the trip so you can <i>chill.</i> Make sure you book
-         all of your excursions before hand as well to be you have sorted out your transportation
-         needs as well. Booking excursionsearly can help you navigate what you need to pack.
+         Always organize your trip plans before the trip so you can <i>chill.</i> Make sure you book
+         all of your excursions before hand. Be sure you have sorted out your transportation
+         needs as well. Booking excursions early can also help you navigate what you need to pack.
           Any popular restaurants you have on your list make sure you have booked them 
           in advanced so that you  are sure you will have a seat at the table. 
          
